# SiFe

./: .gitignore  CMakeLists.txt  Logger.c  Menu.c  Menu.h  README.md  Renderer.c  Renderer.h  UiState.c  logger.c  main.c  main.old.c  menu.c  menu.h  renderer.c  renderer.h  ui_state.c  ui_state.h
.github/workflows/: codeql.yml  msvc.yml
dependencies/SDL-release-2.30.8/.github/workflows/: msvc.yml
dependencies/SDL-release-2.30.8/android-project/app/jni/: CMakeLists.txt
dependencies/SDL-release-2.30.8/build-scripts/: build-release.py  create-release.py  test-versioning.sh
dependencies/SDL-release-2.30.8/src/video/khronos/vulkan/: vk_sdk_platform.h
dependencies/SDL-release-2.30.8/test/: CMakeLists.txt
src/: CMakeLists.txt  Constants.h
src/Config/: CMakeLists.txt  Renderer.c  Renderer.h
src/GUI/: CMakeLists.txt  UiState.c  UiState.h
src/GUI/Components/: CMakeLists.txt  Menu.c  Menu.h
src/Systems/: CMakeLists.txt  Logger.c  Logger.h
